[package]
name = "cuint"
version = "0.1.0"
authors = ["Franziskus Kiefer <franziskuskiefer@gmail.com>"]
description = "Constant time big number library in pure Rust"
repository = "https://github.com/franziskuskiefer/rust-cuint"
keywords = ["bignum", "bigint", "crypto"]
license = "MPL-2.0"

[lib]
name = "cuint"
path = "src/lib.rs"

[dependencies]

[dev-dependencies]
rand = "0.7"
time = "0.1"
